move daily suggestion, and inspirational quote to its own seperate page.

--- a/src/MessageBoard/Views/Home/Index.cshtml
+++ b/src/MessageBoard/Views/Home/Index.cshtml
@@ -16,7 +16,8 @@
 
     <h1>Wanna save the world like your favorite heroes from the movies??</h1>
     <h2>Let me help you discover your very real super power that can change the world.</h2>
-    <h3><a class="ghost-button-full-color" href="~/Deeds/index">Click here</a></h3>
+    <h3><a class="ghost-button-full-color" href="~/Quotes/Index">Click here</a></h3>
+    <a href="~/Deeds/index/#skip">Skip Animation</a>
 </div>
 </body>
 </html> 
