--- a/src/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/src/MessageBoard/Views/Shared/_Layout.cshtml
@@ -30,8 +30,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav navbar-right navbar-custom">
-                        <li><a href="http://www.goodnet.org/articles/7-scientific-facts-about-benefit-doing-good">Science</a></li>
-                        <li><a href="http://www.huffingtonpost.com/2014/06/17/100-religious-groups-doing-good_n_5460739.html">Faith</a></li>
+                        <li><a href="~/Deeds/Index">Daily Suggestion</a></li>
                         <li><a href="/posts">Message Board</a></li>
                         <li>
                             @if (User.Identity.IsAuthenticated)
