--- a/src/MessageBoard/Views/Quotes/Index.cshtml
+++ b/src/MessageBoard/Views/Quotes/Index.cshtml
@@ -1,5 +1,64 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Index"] = "Deed - index";
+
 }
+@using MessageBoard.Controllers;
+
+
+<div class="hidden1">
+    <h1>Your Hidden Superpower is.......</h1>
+</div>
+
+<div class="hidden2">
+    <h1>KINDNESS</h1>
+</div>
+
+<div class="hidden3">
+    <h2>I can here you say: "Your kidding right?"</h2>
+</div>
+
+<div class="hidden4">
+    <h1>Lets talk about how your kindness can change the world!</h1>
+</div>
+<div class="hidden5" id="skip">
+
+
+
+    <div class="sides">
+        <h1>Welcome to Drops for change</h1>
+        <br />
+        <br />
+        <hr />
+        <h2>You are going to learn how small deeds can change the world for the better.</h2>
+
+        <p>
+            I can hear you again.  "Are you kidding?"  "I am already so overwhelmed with my day to day responsibilities that I don’t have any time for any more things to do."  Don't worry.  What I am going to show you won't take any time at all to implement.
+            We have the ability to change the world for the better and I am going to show you how.
+        </p>
+        <br />
+
+        <h2>Kindness; your true superpower is what can cause this change.</h2>
+        <p>Setting your intention each morning to do one good unselfish thing for another person.  Just one thing! And then following through with that intention through a simple act of good will, and the world WILL change!  I can hear you again.  “How can one simple intention, followed by an action truly make a difference?”  In the background of this website, you can see the drops of water falling into the pool.  This is an analogy for what our good intentions and good deeds are going to do.  Each deed is a drop.  If each day I put a drop in, and you put a drop in, and your friends and family put a drop in, and everyone who finds this website puts a drop in we will create an ocean of change making our world a better place.  “Many hands make light work”.</p>
+        <br />
+        <h2>So how does this work?</h2>
+        <p>Each morning when you start your day, I want you to think about helping someone else with the idea that you are going to make their day better.  Just set that intention in your mind.  “What’s the point of that”, you ask?  Everything that we as human beings create in this world starts as an intention.  From the building of the Space Needle to a manned mission to the moon, to the cell phone in our hand.  All these things started as an idea; an intention.  But the intention by itself is not enough.  “The road to hell is paved with good intentions”, or so they say. You can think all day long, about making a difference; but until you perform some action; the intent is meaningless.</p>
+        <br />
+        <h2>Let’s talk about action.</h2>
+        <p>
+            First off, it doesn’t have to be financial.  Money is great, and if you feel so inclined; use it!  But what to do when you don’t have the money?  How about holding the door for a stranger, or giving your seat up on the bus to someone else, or letting someone in while stopped in traffic.  The opportunities to bring good into the world through your intention and your actions; simple actions; are truly limitless.
+            If you have some resources; how about sharing them?  Maybe at the coffee stand, you give the barista ten bucks to pay for the next couple of people.  These actions; these drops; can change the world!
+            So set your intention to perform a good deed; a service to someone else.  And then when you see the chance during the day, follow through.
+        </p>
+        <br />
+        <h2>Let’s make it rain!!</h2>
+        <br />
+
+        <h2>Like some help?</h2>
+
+        <p>Each day this website will offer a new simple suggestion for a good deed.  If you are interested, sign up for our intention/action good deed reminder. Come join us.  Let’s change the world for the better!!</p>
+        <a href="http://eepurl.com/ckwooQ">Click here to sign up for the daily reminder email.</a>
+               
+    </div>
+
+
+</div>
