--- a/src/MessageBoard/Views/Quotes/Index.cshtml
+++ b/src/MessageBoard/Views/Quotes/Index.cshtml
@@ -18,7 +18,7 @@
 </div>
 
 <div class="hidden4">
-    <h1>Lets talk about how your kindness can change the world!</h1>
+    <h1 id="format">Lets talk about how your kindness can change the world!</h1>
 </div>
 <div class="hidden5" id="skip">
 
@@ -55,10 +55,6 @@
 
         <h2>Like some help?</h2>
 
-        <p>Each day this website will offer a new simple suggestion for a good deed.  If you are interested, sign up for our intention/action good deed reminder. Come join us.  Let’s change the world for the better!!</p>
-        <a href="http://eepurl.com/ckwooQ">Click here to sign up for the daily reminder email.</a>
-               
+        <p>Each day this website will offer a new simple suggestion for a good deed, and an inspirational quote <a href="~/Deeds/Index">click here</a>.  If you are interested in receiving a daily reminder via email <a href="http://eepurl.com/ckwooQ">click here</a>. Come join us.  Let’s change the world for the better!!</p>        
     </div>
-
-
 </div>
